bdr.BDR2.scala.error
Compilation error:
BDR2:2: error: '=' expected but ';' found.
while(isOverMessage){
^